# talosai

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  VISION.md  ai_news_podcast_2026-07-01.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
marketing/: ads.md
scripts/: build-mac-app.sh
talos/: agent.py  app.py  cli.py  config.py  learning.py  llm.py  mcp_client.py  memory.py  skills.py  tools.py  verifier.py  web.py  webapp.py
talos/builtin_skills/: code-projekt-starten.md  dateien-organisieren.md  preis-produktvergleich.md  recherche-bericht.md  tages-briefing.md
talos/gateway/: telegram.py
website/: index.html
