[project]
name = "talos-ai"
version = "0.1.0"
description = "Selbstlernender, ehrlicher AI-Agent — open source, self-hostbar, Telegram-first"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "python-dotenv>=1.0",
    "python-telegram-bot>=21.0",
]

[project.scripts]
talos = "talos.cli:main"
talos-telegram = "talos.gateway.telegram:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["talos"]
